# ipfs-cid-v0

./: Cargo.toml  PKG-INFO  README.md  ipfs-cid-v0.pyi  pyproject.toml
src/: lib.rs
tests/: test_compute_hash.py
whls/: ipfs_cid_v0-0.0.1-cp310-cp310-linux_x86_64.whl  ipfs_cid_v0-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ipfs_cid_v0-0.0.1-cp311-cp311-linux_x86_64.whl  ipfs_cid_v0-0.0.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ipfs_cid_v0-0.0.1-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ipfs_cid_v0-0.0.1-cp38-cp38-linux_x86_64.whl  ipfs_cid_v0-0.0.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ipfs_cid_v0-0.0.1-cp39-cp39-linux_x86_64.whl  ipfs_cid_v0-0.0.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
