[package]
name = "ipfs-cid-v0"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ipfs_cid_v0"
crate-type = ["cdylib"]

[dependencies]
ipfs-unixfs = "0.2.0"
multihash = "0.14.0"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
