[build-system]
requires = ["maturin>=0.13,<=1.4.0"]
build-backend = "maturin"

[project]
name = "ipfs-cid-v0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
tests = ["pytest"]
